--- a/style.css
+++ b/style.css
@@ -1,1 +1,84 @@
-/* CSS Code */
+* {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    transition: all 300ms;
+}
+
+body {
+    margin: 16px;
+    background-color: wheat;
+}
+
+input,
+button {
+    border-radius: 4px;
+    margin: 4px;
+    font-size: 24px;
+
+}
+
+h1 {
+    font-size: 48px;
+}
+
+td {
+    font-size: 24px;
+}
+
+button {
+    cursor: pointer;
+    border: 0;
+}
+
+button.red {
+    background: #f00;
+    color: white;
+}
+
+button.red:hover {
+    background-color: #700;
+}
+
+button.blue {
+    background: #00f;
+    color: white;
+}
+
+button.blue:hover {
+    background-color: #007;
+}
+
+button.green {
+    background: #0f0;
+    color: white;
+}
+
+button.green:hover {
+    background-color: #070;
+}
+
+table {
+    width: 80%;
+    margin-inline: auto;
+    margin-block: 16px;
+    border-radius: 16px;
+    border-collapse: collapse;
+    overflow: hidden;
+
+}
+
+thead {
+    background-color: gray;
+    color: white;
+}
+
+tbody tr:nth-child(even) {
+    background-color: rgb(213, 213, 213);
+}
+tbody tr:nth-child(odd) {
+    background-color: white;
+}
+
+.completed {
+    text-decoration: line-through;
+}
